# ai-enhanced-medicine

./: .gitignore  BUILD_ISSUES.md  CLAUDE.md  DOCKER-SETUP.md  Labels.json  README.md  docker-compose.yml  label-schema.json  package.json  setup-docker.sh
.claude/: CLAUDE.md
.claude/commands/: prime.md
.cursor/rules/: guidelines.mdc
apps/api/: .env.example  Dockerfile  package.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/ai-content/: ai-content.controller.ts  ai-content.module.ts  ai-content.service.ts  ai-enhanced-content.entity.ts
apps/api/src/database/: database.module.ts  init.sql  seed-label-schema.ts  seed.ts
apps/api/src/drugs/: drugs.entity.ts  (+4 more)
apps/web/: Dockerfile  next.config.js  package.json  tsconfig.json
components/ui/: badge.tsx
docs/: AI_CONTENT_PROCESSING_SOLUTION.md  IMPLEMENTATION_SUMMARY.md
python-ai-content/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
python-ai-content/src/: __init__.py  main.py
python-ai-content/src/database/: __init__.py  connection.py
python-ai-content/src/resources/: __init__.py  drug_resources.py
python-ai-content/src/tools/: __init__.py  content_transformer.py  faq_generator.py  related_content.py  seo_optimizer.py
python-seeder/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  requirements.txt  run-seeder.sh  run_tests.py  test_error_handling.py
python-seeder/src/: __init__.py  main.py  parser.py  seeder.py  transformer.py
specs/: Technical Specifications.md  python_ai_service_test_plan.md  python_ai_service_test_todowrite.md
(+43 files in other folders)
