[project]
name = "drug-ai-content-server"
version = "1.0.0"
description = "MCP server for AI-powered drug content generation"
authors = [
    {name = "Medication", email = "dev@Medication.com"},
]
dependencies = [
    "fastmcp>=0.2.0",
    "openai>=1.51.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "uvicorn>=0.24.0",
    "asyncpg>=0.29.0",
    "jinja2>=3.1.2",
    "beautifulsoup4>=4.12.2",
    "textstat>=0.7.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"